----- Finished Stuff -----
- Used Javascript to finally get the RateMyProfessor scraper to work.
- Then, used javascript again to sort out and make sure the data is right
- Made a json parser to convert json to java objects, so we have professor objects
- Used jsoup to scrape off of web schedule since selenium wasn't up-to-date and for a static website like web schedule, I felt it was unnecessary to try to use selenium.
- Finished gathering all the classes as json, I decided that it would be faster to just have the data offline rather than looking it up everytime I run a function.
- Map out subjects and classes (This should be fine). This was indeed not that bad, and it    is finally finished.
- Add the professor data to each of those classes
- Use the bayesian probability on Rate My Professor to aggregate the data and give the best class
- It's finished. Now, just to integrate the UI
- Just made a demo of what the user would input and what it would output.

Future Change:
- Finish GUI